# faster-whisper-cli

./: README.md  pyproject.toml
faster_whisper_cli/: cli.py
